created about and login pages

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,29 +1,34 @@
-<div class="header">
+<div id="header">
 	<h1>MARIA NIFOROS</h1>
 	<h3>FINE ANTIQUE LACE, LINENS, & TEXTILES</h3>
+<!-- 	<p id="tagline">Purveyor of fine antique lace and textiles for over thirty years</p> -->
 </div>
 
-<div class="categories">
+<div id="categories">
 
 	<!-- this will be a dynamically-generated list -->
 
 	<h5>Browse by Category</h5>
 
-	<p>LACE</p>
-	<p>LINENS</p>
-	<p>FANS</p>
-	<p>CLOTHING</p>	
-	<p>SHAWLS</p>
-	<p>CHILDREN'S ITEMS</p>	
-	<p>TEXTILES</p>
-	<p>ACCESSORIES</p>	
-	<p>EARLY ITEMS</p>
+	<p><a href="">LACE</a></p>
+	<p><a href="">LINENS</a></p>
+	<p><a href="">FANS</a></p>
+	<p><a href="">CLOTHING</a></p>	
+	<p><a href="">SHAWLS</a></p>
+	<p><a href="">CHILDREN'S ITEMS</a></p>	
+	<p><a href="">TEXTILES</a></p>
+	<p><a href="">ACCESSORIES</a></p>	
+	<p><a href="">EARLY ITEMS</a></p>
 
+	<br>
+	<p>- or -</p>
+
+	<h5><a href="">Search by Keywords</a></h5>
 
 </div>
 
-<div class="footer">
-	<h5><a href="">LOG IN</a> | <a href="">ABOUT</a> | <a href="">CONTACT</a></h5>
+<div id="footer">
+	<h5><a href="/login">LOGIN</a> | <a href="/about">ABOUT</a> | <a href="">CONTACT</a></h5>
 </div>
 
 
