--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,76 +1,346 @@
-body {
-	background-image: url('http://www.marianiforos.com/homepic5.jpg');
-	background-repeat: no-repeat;
-	background-size: 100%;
-	font-family: 'Cinzel', serif;
-	text-align: center;
-}
+@media (min-width: 770px) {
 
-/*h1 {
-	color: white;
-	font-size: 48px;
-	font-weight: 700;
-
-}*/
-
-.header {
-	width: 100%;
-	border: 0;
-	height: 150px;
-	background-color: rgba(255,255,255,0.9);
-	position: absolute;
-	top: 0;
-
-	h1 {
-		font-size: 48px;
-		letter-spacing: 0.1em;
+	body {
+		background-image: url('http://www.marianiforos.com/homepic5.jpg');
+		background-repeat: no-repeat;
+		background-size: 100%;
+		font-family: 'Cinzel', serif;
+		text-align: center;
 	};
 
-	h3 { 
-		color: red;
-		letter-spacing: 0.05em;
+	#header {
+		width: 100%;
+		border: 0;
+		background-color: rgba(255,255,255,0.9);
+		position: absolute;
+		top: 0;
 
+		h1 {
+			line-height: 50px;
+			font-size: 48px;
+			letter-spacing: 0.2em;
+		};
+
+		h3 { 
+			line-height: 20px;
+			font-size: 20px;
+			color: red;
+			letter-spacing: 0.2em;
+		};
+
+		#tagline {
+			font-size: 12px;
+			font-weight: 700;
+			color: black;
+		};
+
+	};
+
+	#categories {
+		width: 300px;
+		margin-top: 170px;
+		margin-left: 100px;
+		background-color: rgba(255,255,255,0.9);
+
+		h5 {
+			line-height: 50px;
+			font-size: 16px;
+			color: red;
+			font-weight: 700;
+			letter-spacing: 0.075em;
+		};
+
+		p {
+			font-size: 16px;
+			letter-spacing: 0.075em;
+
+			a {
+				color: black;
+			};
+
+		};
+
+		a {
+			color: red;
+		};
+
+	};
+
+	#footer {
+		width: 100%;
+		height: 40px;
+		background-color: rgba(255,255,255,0.7);
+		position: fixed;
+		bottom: 0;
+
+		h5 {
+			font-size: 16px;
+			letter-spacing: 0.05em;
+			color: black;
+		}
+
+		a {
+			color: red;
+		}
+	};
+
+	#about {
+		width: 50%;
+		margin-top: 50px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 20px;
+		text-align: left;
+		font-size: 18px;
+		background-color: rgba(255,255,255,0.9);
+		padding: 20px;
+
+		p {
+			font-family: 'Arapey', serif;
+		}
+
+		#signature {
+			font-family: 'Cinzel', serif;
+			font-size: 18px;
+			color: red;
+		}
+
+		h2 {
+			line-height: 30px;
+			color: red;
+			text-align: center;
+		}
+
+		a {
+			color: red;
+		}
+	};
+
+	.topnav {
+		font-size: 16px;
+		line-height: 20px;
+		text-align: center;
+
+		a {
+			color: white;
+		};
+
+		a:hover {
+			color: white;
+		};
+
+		a:visited {
+			color: white;
+		};
+	};
+
+	.login {
+		width: 30%;
+		margin-top: 150px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 20px;
+		text-align: center;
+		font-size: 18px;
+		background-color: rgba(255,255,255,0.9);
+		padding: 20px;
+
+		label {
+			color: red;
+		}
+
+		input[type=text] {
+			font-family: Courier;
+			width: 90%;
+		}
+
+		input[type=submit] {
+			margin-top: 10px;
+			color: black;
+			width: 25%;
+		}
+
+		p {
+			margin-top: 20px;
+			margin-bottom: 10px;
+			font-size: 12px;
+			color: black;
+		}
 	};
 
 };
 
-.categories {
-	width: 300px;
-	height: 460px;
-	margin-top: 170px;
-	margin-left: 50px;
-	padding-top: 40px;
-	background-color: rgba(255,255,255,0.9);
 
-	h5 {
-		margin-top: 40px;
-		font-size: 16px;
-		color: red;
-		font-weight: 700;
-		letter-spacing: 0.075em;
+
+
+
+
+
+/*====================================================================*/
+
+@media (max-width: 770px) {
+
+	body {
+		background-image: url('http://www.marianiforos.com/homepic5.jpg');
+		background-repeat: repeat;
+		background-size: 100%;
+		font-family: 'Cinzel', serif;
+		text-align: center;
 	};
 
-	p {
-		font-size: 16px;
-		letter-spacing: 0.075em;
+	.header {
+		width: 100%;
+		border: 0;
+		height: 150px;
+		background-color: rgba(255,255,255,0.9);
+		position: absolute;
+		top: 0;
+
+		h1 {
+			line-height: 40px;
+			font-size: 36px;
+			letter-spacing: 0.1em;
+		};
+
+		h3 { 
+			line-height: 20px;
+			font-size: 16px;
+			color: red;	
+			letter-spacing: 0.05em;
+
+		};
 
 	};
-};
 
-.footer {
-	width: 100%;
-	height: 40px;
-	background-color: rgba(255,255,255,0.7);
-	position: fixed;
-	bottom: 0;
+	.categories {
+		width: 70%;
+		height: 460px;
+		margin-top: 170px;
+		margin-left: auto;
+		margin-right: auto;
+		float: center;
+		background-color: rgba(255,255,255,0.9);
 
-	h5 {
+		h5 {
+			line-height: 50px;
+			font-size: 16px;
+			color: red;
+			font-weight: 700;
+			letter-spacing: 0.075em;
+		};
+
+		p {
+			font-size: 16px;
+			letter-spacing: 0.075em;
+
+			a {
+				color: black;
+			};
+
+		};
+
+		a {
+			color: red;
+		};
+
+	};
+
+	.footer {
+		width: 100%;
+		height: 40px;
+		margin-top: 20px;
+		background-color: rgba(255,255,255,0.9);
+
+		h5 {
+			line-height: 30px;
+			font-size: 16px;
+			letter-spacing: 0.05em;
+			color: black;
+		}
+
+		a {
+			color: red;
+		}
+	};
+
+	.about {
+		width: 90%;
+		margin-top: 30px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 20px;
+		text-align: left;
+		font-size: 18px;
+		background-color: rgba(255,255,255,0.9);
+		padding: 10px;
+
+		p {
+			font-family: 'Arapey', serif;
+		}
+
+		#signature {
+			font-family: 'Cinzel', serif;
+			font-size: 18px;
+			color: red;
+		}
+
+		h2 {
+			color: red;
+			text-align: center;
+		}
+	};
+
+	.topnav {
 		font-size: 16px;
-		letter-spacing: 0.05em;
-		color: black;
-	}
+		line-height: 20px;
+		text-align: center;
 
-	a {
-		color: red;
-	}
+		a {
+			color: white;
+		};
+
+		a:hover {
+			color: white;
+		};
+
+		a:visited {
+			color: white;
+		};
+
+	};
+
+	.login {
+		width: 90%;
+		margin-top: 50px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 20px;
+		text-align: center;
+		font-size: 18px;
+		background-color: rgba(255,255,255,0.9);
+		padding: 20px;
+
+		label {
+			color: red;
+		}
+
+		input[type=text] {
+			font-family: Courier;
+			width: 90%;
+		}
+
+		input[type=submit] {
+			margin-top: 10px;
+			color: black;
+			width: 25%;
+		}
+
+		p {
+			margin-top: 20px;
+			margin-bottom: 10px;
+			font-size: 12px;
+			color: black;
+		}
+	};
+
 };
