--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -38,17 +38,28 @@
 
 	#categories {
 		width: 300px;
+		height: 440px;
+		float: left;
 		margin-top: 170px;
 		margin-left: 100px;
+		padding-bottom: 20px;
 		background-color: rgba(255,255,255,0.9);
 
 		h5 {
-			line-height: 50px;
+			line-height: 40px;
 			font-size: 16px;
 			color: red;
 			font-weight: 700;
 			letter-spacing: 0.075em;
 		};
+
+		#cat-list {
+			width: 90%;
+			margin-left: auto;
+			margin-right: auto;
+			height: 360px;
+			overflow: scroll;
+		}
 
 		p {
 			font-size: 16px;
@@ -60,9 +71,48 @@
 
 		};
 
-		a {
+	};
+
+	#keywords {
+		width: 300px;
+		height: 440px;
+		float: right;
+		margin-top: 170px;
+		margin-right: 100px;
+		background-color: rgba(255,255,255,0.9);
+		text-align: center;
+
+		h5 {
+			text-align: center;
+			line-height: 40px;
+			font-size: 16px;
 			color: red;
+			font-weight: 700;
+			letter-spacing: 0.075em;
 		};
+
+		#key-list {
+			width: 90%;
+			text-align: left;
+			margin-left: auto;
+			margin-right: auto;
+			height: 320px;
+			overflow: scroll;
+		}
+
+		input[type=checkbox] {
+			margin-left: 20%;
+			text-align: left;
+			height: 16px;
+		}
+		
+		input[type=submit] {
+			text-align: center;
+			margin-top: 20px;
+			margin-bottom: 20px;
+			color: black;
+			width: 30%;
+		}
 
 	};
 
@@ -155,6 +205,11 @@
 			width: 90%;
 		}
 
+		input[type=password] {
+			font-family: Courier;
+			width: 90%;
+		}
+
 		input[type=submit] {
 			margin-top: 10px;
 			color: black;
@@ -189,7 +244,7 @@
 		text-align: center;
 	};
 
-	.header {
+	#header {
 		width: 100%;
 		border: 0;
 		height: 150px;
@@ -213,22 +268,31 @@
 
 	};
 
-	.categories {
-		width: 70%;
-		height: 460px;
+	#categories {
+		width: 80%;
+		height: 440px;
+		float: center;
 		margin-top: 170px;
 		margin-left: auto;
 		margin-right: auto;
-		float: center;
+		padding-bottom: 20px;
 		background-color: rgba(255,255,255,0.9);
 
 		h5 {
-			line-height: 50px;
+			line-height: 40px;
 			font-size: 16px;
 			color: red;
 			font-weight: 700;
 			letter-spacing: 0.075em;
 		};
+
+		#cat-list {
+			width: 90%;
+			margin-left: auto;
+			margin-right: auto;
+			height: 360px;
+			overflow: scroll;
+		}
 
 		p {
 			font-size: 16px;
@@ -240,13 +304,53 @@
 
 		};
 
-		a {
+	};
+
+	#keywords {
+		width: 80%;
+		height: 440px;
+		float: center;
+		margin-top: 20px;
+		margin-left: auto;
+		margin-right: auto;
+		background-color: rgba(255,255,255,0.9);
+		text-align: center;
+
+		h5 {
+			text-align: center;
+			line-height: 40px;
+			font-size: 16px;
 			color: red;
+			font-weight: 700;
+			letter-spacing: 0.075em;
 		};
+
+		#key-list {
+			width: 90%;
+			text-align: left;
+			margin-left: auto;
+			margin-right: auto;
+			height: 320px;
+			overflow: scroll;
+		}
+
+		input[type=checkbox] {
+			margin-left: 20%;
+			text-align: left;
+			height: 16px;
+		}
+		
+		input[type=submit] {
+			text-align: center;
+			margin-top: 20px;
+			margin-bottom: 20px;
+			color: black;
+			width: 30%;
+		}
 
 	};
 
-	.footer {
+	#footer {
 		width: 100%;
 		height: 40px;
 		margin-top: 20px;
@@ -264,7 +368,7 @@
 		}
 	};
 
-	.about {
+	#about {
 		width: 90%;
 		margin-top: 30px;
 		margin-left: auto;
@@ -310,7 +414,7 @@
 
 	};
 
-	.login {
+	#login {
 		width: 90%;
 		margin-top: 50px;
 		margin-left: auto;
@@ -327,6 +431,11 @@
 		}
 
 		input[type=text] {
+			font-family: Courier;
+			width: 90%;
+		}
+
+		input[type=password] {
 			font-family: Courier;
 			width: 90%;
 		}
