created new item and image views

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,8 +1,9 @@
+<body class="welcome">
 <h5 class="topnav"><a href="/">HOME</a></h5>
 
 <div id="about">
 
-	<h2>About</h2>
+	<h2>About Me</h2>
 
 	<p>	Thank you very much for visiting our website.</p>
 
@@ -17,3 +18,4 @@
 	<p id="signature">Maria Niforos</p>
 
 </div>
+</body>
