--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
+<body class="welcome">
 <div id="header">
 	<h1>MARIA NIFOROS</h1>
 	<h3>FINE ANTIQUE LACE, LINENS, & TEXTILES</h3>
@@ -8,9 +9,9 @@
 
 	<h5>Browse by Category</h5>
 
-	<!-- this will be a dynamically-generated list -->
+	<!-- this will be a dynamically-generated list, with get requests to item search route -->
 	<div id="cat-list">
-		<p><a href="">LACE</a></p>
+		<p><a href="/items">LACE</a></p>
 		<p><a href="">LINENS</a></p>
 		<p><a href="">FANS</a></p>
 		<p><a href="">CLOTHING</a></p>	
@@ -27,7 +28,7 @@
 
 	<h5>Search by Keywords</h5>
 
-	<!-- this will be a dynamically-generated list -->
+	<!-- this will be a dynamically-generated list, with get requests to item search route -->
 
 	<form action="" method="post">
 		<div id="key-list">
@@ -53,7 +54,7 @@
 	<% if (session[:user_id] == nil) %>
 	 	<h5><a href="/login">LOGIN</a> | <a href="/about">ABOUT</a> | <a href="mailto:ariam7@gmail.com">CONTACT</a></h5>
 	 <% else %>
-	 	<h5>You are logged in as: <%= session[:user_name] %>
+	 	<h5>You are logged in as: <%= session[:user_name] %> | 
 	 	<form action="/logout" method="post">
 	 		<input type="submit" value="LOGOUT"/>
 	 		<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
@@ -65,7 +66,7 @@
 	 	<% end %>
 	 <% end %>
 </div>
-
+</body>
 
 
 
