--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,11 +1,29 @@
 @media (min-width: 770px) {
 
-	body {
+	body.welcome {
 		background-image: url('http://www.marianiforos.com/homepic5.jpg');
 		background-repeat: no-repeat;
 		background-size: 100%;
 		font-family: 'Cinzel', serif;
 		text-align: center;
+
+		.topnav {
+			font-size: 16px;
+			line-height: 20px;
+			text-align: center;
+
+			a {
+				color: white;
+			};
+
+			a:hover {
+				color: white;
+			};
+
+			a:visited {
+				color: white;
+			};
+		};
 	};
 
 	#header {
@@ -59,7 +77,7 @@
 			margin-right: auto;
 			height: 360px;
 			overflow: scroll;
-		}
+		};
 
 		p {
 			font-size: 16px;
@@ -98,13 +116,13 @@
 			margin-right: auto;
 			height: 320px;
 			overflow: scroll;
-		}
+		};
 
 		input[type=checkbox] {
 			margin-left: 20%;
 			text-align: left;
 			height: 16px;
-		}
+		};
 		
 		input[type=submit] {
 			text-align: center;
@@ -112,7 +130,7 @@
 			margin-bottom: 20px;
 			color: black;
 			width: 30%;
-		}
+		};
 
 	};
 
@@ -127,15 +145,15 @@
 			font-size: 16px;
 			letter-spacing: 0.1em;
 			color: black;
-		}
+		};
 
 		a {
 			color: red;
-		}
+		};
 
 		form {
 			display: inline-block;
-		}
+		};
 
 		input[type=submit] {
 			font-size: 16px;
@@ -143,7 +161,7 @@
 			color: red;
 			border: none;
 			background: none;
-		}
+		};
 
 	};
 
@@ -160,13 +178,13 @@
 
 		p {
 			font-family: 'Arapey', serif;
-		}
+		};
 
 		#signature {
 			font-family: 'Cinzel', serif;
 			font-size: 18px;
 			color: red;
-		}
+		};
 
 		h2 {
 			margin-top: 5px;
@@ -174,28 +192,10 @@
 			line-height: 20px;
 			color: red;
 			text-align: center;
-		}
+		};
 
 		a {
 			color: red;
-		}
-	};
-
-	.topnav {
-		font-size: 16px;
-		line-height: 20px;
-		text-align: center;
-
-		a {
-			color: white;
-		};
-
-		a:hover {
-			color: white;
-		};
-
-		a:visited {
-			color: white;
 		};
 	};
 
@@ -213,30 +213,30 @@
 		label {
 			letter-spacing: 0.1em;
 			color: red;
-		}
+		};
 
 		input[type=text] {
 			font-family: Courier;
 			width: 90%;
-		}
+		};
 
 		input[type=password] {
 			font-family: Courier;
 			width: 90%;
-		}
+		};
 
 		input[type=submit] {
 			margin-top: 10px;
 			color: black;
 			width: 25%;
-		}
+		};
 
 		p {
 			margin-top: 20px;
 			margin-bottom: 10px;
 			font-size: 12px;
 			color: black;
-		}
+		};
 	};
 
 };
@@ -251,12 +251,30 @@
 
 @media (max-width: 770px) {
 
-	body {
+	body.welcome {
 		background-image: url('http://www.marianiforos.com/homepic5.jpg');
 		background-repeat: repeat;
 		background-size: 100%;
 		font-family: 'Cinzel', serif;
 		text-align: center;
+
+		.topnav {
+			font-size: 16px;
+			line-height: 20px;
+			text-align: center;
+
+			a {
+				color: white;
+			};
+
+			a:hover {
+				color: white;
+			};
+
+			a:visited {
+				color: white;
+			};
+		};
 	};
 
 	#header {
@@ -307,7 +325,7 @@
 			margin-right: auto;
 			height: 360px;
 			overflow: scroll;
-		}
+		};
 
 		p {
 			font-size: 16px;
@@ -347,13 +365,13 @@
 			margin-right: auto;
 			height: 320px;
 			overflow: scroll;
-		}
+		};
 
 		input[type=checkbox] {
 			margin-left: 20%;
 			text-align: left;
 			height: 16px;
-		}
+		};
 		
 		input[type=submit] {
 			text-align: center;
@@ -361,7 +379,7 @@
 			margin-bottom: 20px;
 			color: black;
 			width: 30%;
-		}
+		};
 
 	};
 
@@ -376,15 +394,15 @@
 			font-size: 16px;
 			letter-spacing: 0.1em;
 			color: black;
-		}
+		};
 
 		a {
 			color: red;
-		}
+		};
 
 		form {
 			display: inline-block;
-		}
+		};
 
 		input[type=submit] {
 			font-size: 16px;
@@ -392,7 +410,7 @@
 			color: red;
 			border: none;
 			background: none;
-		}
+		};
 	};
 
 	#about {
@@ -408,13 +426,13 @@
 
 		p {
 			font-family: 'Arapey', serif;
-		}
+		};
 
 		#signature {
 			font-family: 'Cinzel', serif;
 			font-size: 18px;
 			color: red;
-		}
+		};
 
 		h2 {
 			margin-top: 5px;
@@ -422,29 +440,10 @@
 			line-height: 20px;
 			color: red;
 			text-align: center;
-		}
+		};
 
 		a {
 			color: red;
-		}
-
-	};
-
-	.topnav {
-		font-size: 16px;
-		line-height: 20px;
-		text-align: center;
-
-		a {
-			color: white;
-		};
-
-		a:hover {
-			color: white;
-		};
-
-		a:visited {
-			color: white;
 		};
 
 	};
@@ -463,30 +462,30 @@
 		label {
 			letter-spacing: 0.1em;
 			color: red;
-		}
+		};
 
 		input[type=text] {
 			font-family: Courier;
 			width: 90%;
-		}
+		};
 
 		input[type=password] {
 			font-family: Courier;
 			width: 90%;
-		}
+		};
 
 		input[type=submit] {
 			margin-top: 10px;
 			color: black;
 			width: 25%;
-		}
+		};
 
 		p {
 			margin-top: 20px;
 			margin-bottom: 10px;
 			font-size: 12px;
 			color: black;
-		}
+		};
 	};
 
 };
