working on image upload

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -7,55 +7,59 @@
 	<h5 class="topnav"><a href="/">HOME</a></h5>
 <% end %>
 
-<h1 class="category">LACE</h1>
+<h1 class="headline">LACE</h1>
 
 <!-- possible hidden keyword/category edit search box here? -->
 
 <!-- loop through search results here -->
 
-<div class="preview">
+<div id="results">
 
-	<a href=""><img class="thumb" src="http://www.marianiforos.com/la225thumb.jpg"/></a>
+	<div class="preview">
 
-	<div class="blurb">
+		<a href=""><img class="thumb" src="http://www.marianiforos.com/la225thumb.jpg"/></a>
 
-		<h4>Antique Lace # LA-225</h4>
+		<div class="blurb">
 
-		<h3><a href="">Majestic Brussels Lace Shawl w/ Point De Gaze Lace</a></h3>
+			<h4>Antique Lace # LA-225</h4>
 
-		<p>A sumptious shawl! Splendid both in design and workmanship, with a elaborate design of flowing vines, leaves, and flowers. Superbly worked, large oval vignettes contain large three-dimensional roses, some measuring 4 1/2" across. The scale of the design is dramatic, this is the pinnacle of Brussels lace, truly museum quality. Measuring apprx. 123" by 38", 312 cm by almost 97 cm.</p>
+			<h3><a href="">Majestic Brussels Lace Shawl w/ Point De Gaze Lace</a></h3>
 
-	</div>
+			<p>A sumptious shawl! Splendid both in design and workmanship, with a elaborate design of flowing vines, leaves, and flowers. Superbly worked, large oval vignettes contain large three-dimensional roses, some measuring 4 1/2" across. The scale of the design is dramatic, this is the pinnacle of Brussels lace, truly museum quality. Measuring apprx. 123" by 38", 312 cm by almost 97 cm.</p>
 
-</div>
-
-<div class="preview">
-
-	<a href=""><img class="thumb" src="http://www.marianiforos.com/la225thumb.jpg"/></a>
-
-	<div class="blurb">
-
-		<h4>Antique Lace # LA-225</h4>
-
-		<h3><a href="">Majestic Brussels Lace Shawl w/ Point De Gaze Lace</a></h3>
-
-		<p>A sumptious shawl! Splendid both in design and workmanship, with a elaborate design of flowing vines, leaves, and flowers. Superbly worked, large oval vignettes contain large three-dimensional roses, some measuring 4 1/2" across. The scale of the design is dramatic, this is the pinnacle of Brussels lace, truly museum quality. Measuring apprx. 123" by 38", 312 cm by almost 97 cm.</p>
+		</div>
 
 	</div>
 
-</div>
+	<div class="preview">
 
-<div class="preview">
+		<a href=""><img class="thumb" src="http://www.marianiforos.com/la225thumb.jpg"/></a>
 
-	<a href=""><img class="thumb" src="http://www.marianiforos.com/la225thumb.jpg"/></a>
+		<div class="blurb">
 
-	<div class="blurb">
+			<h4>Antique Lace # LA-225</h4>
 
-		<h4>Antique Lace # LA-225</h4>
+			<h3><a href="">Majestic Brussels Lace Shawl w/ Point De Gaze Lace</a></h3>
 
-		<h3><a href="">Majestic Brussels Lace Shawl w/ Point De Gaze Lace</a></h3>
+			<p>A sumptious shawl! Splendid both in design and workmanship, with a elaborate design of flowing vines, leaves, and flowers. Superbly worked, large oval vignettes contain large three-dimensional roses, some measuring 4 1/2" across. The scale of the design is dramatic, this is the pinnacle of Brussels lace, truly museum quality. Measuring apprx. 123" by 38", 312 cm by almost 97 cm.</p>
 
-		<p>A sumptious shawl! Splendid both in design and workmanship, with a elaborate design of flowing vines, leaves, and flowers. Superbly worked, large oval vignettes contain large three-dimensional roses, some measuring 4 1/2" across. The scale of the design is dramatic, this is the pinnacle of Brussels lace, truly museum quality. Measuring apprx. 123" by 38", 312 cm by almost 97 cm.</p>
+		</div>
+
+	</div>
+
+	<div class="preview">
+
+		<a href=""><img class="thumb" src="http://www.marianiforos.com/la225thumb.jpg"/></a>
+
+		<div class="blurb">
+
+			<h4>Antique Lace # LA-225</h4>
+
+			<h3><a href="">Majestic Brussels Lace Shawl w/ Point De Gaze Lace</a></h3>
+
+			<p>A sumptious shawl! Splendid both in design and workmanship, with a elaborate design of flowing vines, leaves, and flowers. Superbly worked, large oval vignettes contain large three-dimensional roses, some measuring 4 1/2" across. The scale of the design is dramatic, this is the pinnacle of Brussels lace, truly museum quality. Measuring apprx. 123" by 38", 312 cm by almost 97 cm.</p>
+
+		</div>
 
 	</div>
 
