--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -24,7 +24,7 @@
 		};
 	};
 
-	h1.category {
+	h1.headline {
 		margin-top: 30px;
 		line-height: 50px;
 		font-size: 48px;
@@ -58,10 +58,75 @@
 			color: red;
 		}
 
+		a:hover {
+			color: red;
+		};
+
+		a:visited {
+			color: red;
+		};
+
 		p {
 			font-size: 18px;
 			font-family: 'Arapey', serif;
-		}
+		};
+	};
+
+	#add-item {
+		width: 40%;
+		float: center;
+		margin-top: 50px;
+		margin-left: auto;
+		margin-right: auto;
+		text-align: left;	
+		border: solid black 1px;
+		padding: 10px;
+
+		label {
+			width: 25%;
+			color: red;
+			margin-right: 5px;
+			text-align: right;
+		};
+
+		input[type=text] {
+			width: 70%;
+			margin-top: 5px;
+		};
+
+		input[type=text].short {
+			width: 30%;
+			margin-top: 5px;
+		};
+
+		input[type=date] {
+			width: 30%;
+			margin-top: 5px;
+		};
+
+		textarea {
+			width: 70%;
+			margin-top: 5px;
+			height: 100px;
+			overflow: scroll;
+		};
+
+		input[type=submit] {
+			margin-top: 20px;
+			text-align: center;
+			width: 75px;
+		};
+
+		input[type=radiobutton] {
+			width: 10px;
+			margin-top: 5px;
+		};
+
+		.short {
+			width: 30px;
+			color: 'green';	
+		};	
+
 	};
 
 
