--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,37 +1,56 @@
-<h1>This is the add new item page</h1>
+<body class="item">
 
-<!-- add images should be on the edit page - redirect there after create -->
+<% if (session[:is_admin] != 'true') %>
+	<h2>Sorry, you do not have permission to access this page.</h2>
+<% else %>
 
-<%= link_to "Add a New Image", "/items/#{@item.id}/images/new" %>
+	<h5 class="topnav">You are logged in as: <%= session[:user_name] %> | <a href="/">HOME</a> | <a href="/items">BACK TO ITEMS</a></h5>
 
-<%= link_to "Temporary Add a New Image", "/images/new" %>
+	<h1 class="headline">NEW ITEM</h1>
 
-<%= form_for @item, url: {action: "create"} do |f| %>
-	
-	<%= f.label :code, "Code" %>
-	<%= f.text_field :code %><br>
-	<%= f.label :caption, "Caption" %>
-	<%= f.text_field :caption %><br>
-	<%= f.label :condition, "Condition" %>
-	<%= f.text_field :condition %><br>
-	<%= f.label :measurements, "Measurements" %>
-	<%= f.text_field :measurements %><br>
-	<%= f.label :date_acquired, "Date Acquired" %>
-	<%= f.date_field :date_acquired %><br>
-	<%= f.label :date_sold, "Date Sold" %>
-	<%= f.date_field :date_sold %><br>
-	<%= f.label :purchase_price, "Purchase Price" %>
-	<%= f.text_field :purchase_price %><br>
-	<%= f.label :selling_price, "Selling Price" %>
-	<%= f.text_field :selling_price %><br>
-	<%= f.label :description %>
-	<%= f.text_area :description %><br>
+	<!-- add images should be on the edit page - redirect there after create -->
 
-	<%= f.radio_button(:is_available, "true") %>
-	<%= f.label(:is_available, "Yes") %>
-	<%= f.radio_button(:is_available, "false") %>
-	<%= f.label(:is_available, "No") %>
+	<%= link_to "Add a New Image", "/items/#{@item.id}/images/new" %>
 
-	<%= f.submit "Create", html: {class: "button"}  %>
+	<%= link_to "Temporary Add a New Image", "/images/new" %>
+
+	<div id="add-item">
+
+		<%= form_for @item, url: {action: "create"} do |f| %>
+			
+			<%= f.label :code, "Code" %>
+			<%= f.text_field :code %><br>
+			<%= f.label :caption, "Caption" %>
+			<%= f.text_field :caption %><br>
+			<%= f.label :condition, "Condition" %>
+			<%= f.text_field :condition %><br>
+			<%= f.label :measurements, "Measurements" %>
+			<%= f.text_field :measurements %><br>
+			<%= f.label :date_acquired, "Date Acquired" %>
+			<%= f.date_field :date_acquired %><br>
+			<%= f.label :date_sold, "Date Sold" %>
+			<%= f.date_field :date_sold %><br>
+			<%= f.label :purchase_price, "Purchase Price" %>
+			<%= f.text_field :purchase_price, {:class => "short"} %><br>
+			<%= f.label :selling_price, "Selling Price" %>
+			<%= f.text_field :selling_price, {:class => "short"} %><br>
+			<%= f.label :description, "Description" %>
+			<%= f.text_area :description %><br>
+
+			<%= f.label :is_available, "Item Available?" %>
+			<%= f.radio_button(:is_available, "true") %>
+			<%= f.label(:is_available, "Yes", {:class => "short"}) %>
+			<%= f.radio_button(:is_available, "false") %>
+			<%= f.label(:is_available, "No", {:class => "short"}) %><br>
+			
+			
+
+			<%= f.submit "Create", {:class => "button"}  %>
+		<% end %>
+
+	</div>
+
 <% end %>
+
+</body>
 
