executed dragonfly and amazon s3 functionality

--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -21,8 +21,21 @@
 			a:visited {
 				color: red;
 			};
+
 		};
 	};
+
+	a {
+			color: red;
+		};
+
+		a:hover {
+			color: red;
+		};
+
+		a:visited {
+			color: red;
+		};
 
 	h1.headline {
 		margin-top: 30px;
@@ -72,15 +85,19 @@
 		};
 	};
 
-	#add-item {
+	#item-form {
 		width: 40%;
 		float: center;
-		margin-top: 50px;
+		margin-top: 20px;
 		margin-left: auto;
 		margin-right: auto;
 		text-align: left;	
 		border: solid black 1px;
 		padding: 10px;
+
+		#submit {
+			text-align: center;
+		}
 
 		label {
 			width: 25%;
@@ -92,16 +109,19 @@
 		input[type=text] {
 			width: 70%;
 			margin-top: 5px;
+			font-family: 'Courier';
 		};
 
 		input[type=text].short {
 			width: 30%;
 			margin-top: 5px;
+			font-family: 'Courier';
 		};
 
 		input[type=date] {
 			width: 30%;
 			margin-top: 5px;
+			font-family: 'Courier';
 		};
 
 		textarea {
@@ -109,6 +129,8 @@
 			margin-top: 5px;
 			height: 100px;
 			overflow: scroll;
+			font-family: 'Courier';
+			padding: 5px;
 		};
 
 		input[type=submit] {
