--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -2,7 +2,7 @@
 
 
 
-<%= form_for @image do |f| %>
+<%= form_for @image, url: {action: "create"} do |f| %>
 	<%= f.label :caption, "Caption" %>
 	<%= f.text_field :caption %><br>
 
