--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -24,11 +24,51 @@
 		};
 	};
 
+	a {
+		color: red;
+	};
+
+	a:hover {
+		color: red;
+	};
+
+	a:visited {
+		color: red;
+	};
+
 	h1.headline {
 		margin-top: 30px;
 		line-height: 50px;
 		font-size: 48px;
 		letter-spacing: 0.2em;
+	};
+
+	#image-container {
+		width: 80%;
+		margin-top: 40px;
+		margin-left: auto;
+		margin-right: auto;
+
+		a {
+			color: red;
+		};
+
+		a:hover {
+			color: red;
+		};
+
+		a:visited {
+			color: red;
+		};
+
+	};
+
+	.image-view {
+		width: 500px;
+		height: 400px;
+		margin-top: 10px;
+		margin-right: 20px;
+
 	};
 
 };
