seeded categories and keywords and adjusted welcome page

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -5,6 +5,8 @@
 
 	<h2>About Me</h2>
 
+	<p id="tagline">Purveyor of fine antique lace and textiles for over thirty years</p>
+
 	<p>	Thank you very much for visiting our website.</p>
 
 	<p>I have been selling fine antique lace, linens, textiles, and fans in London, England  since 1977. I have supplied many fine and historical pieces to private collectors, museums, and also to many shops throughout Europe and Japan. Now also based in New York, in addition to supplying many of our customers in Europe we also do a few major shows in the U.S, and sell smaller items of lace and textiles on Ebay.</p>
@@ -15,7 +17,7 @@
 
 	<p>Thank you very much,</p>
 
-	<p id="signature">Maria Niforos</p>
+	<p id="signature"><a href="mailto:ariam7@gmail.com">Maria Niforos</a></p>
 
 </div>
 </body>
