--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -46,12 +46,6 @@
 			letter-spacing: 0.2em;
 		};
 
-		#tagline {
-			font-size: 12px;
-			font-weight: 700;
-			color: black;
-		};
-
 	};
 
 	#categories {
@@ -176,6 +170,13 @@
 		background-color: rgba(255,255,255,0.9);
 		padding: 20px;
 
+		#tagline {
+			font-size: 16px;
+			font-style: italic;
+			text-align: center;
+			color: red;
+		};
+
 		p {
 			font-family: 'Arapey', serif;
 		};
@@ -188,7 +189,7 @@
 
 		h2 {
 			margin-top: 5px;
-			margin-bottom: 20px;
+			margin-bottom: 15px;
 			line-height: 20px;
 			color: red;
 			text-align: center;
