--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -51,7 +51,7 @@
 	 	</form>
 	 	| <a href="/about">ABOUT</a> | <a href="mailto:ariam7@gmail.com">CONTACT</a> 
 	 	<% if (session[:is_admin] == 'true') %>
-	 		| <a href="">CATEGORIES</a> | <a href="">KEYWORDS</a></h5> 
+	 		| <a href="/admin">ADMIN CENTER</a></h5> 
 	 	<% end %>
 	 <% end %>
 </div>
