--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -275,13 +275,15 @@
 
 		#cat-key-list {
 			width: 95%;
-			height: 480px;	
+			height: 460px;	
+			margin-bottom: 10px;
 			text-align: left;
 			overflow: scroll;
 		};
 
 		input[type=text] {
-			width: 60%;
+			width: 65%;
+			float: left;
 			margin-left: 10px;
 			margin-bottom: 10px;
 			font-family: Courier;
@@ -289,13 +291,15 @@
 
 		input[type=submit] {
 			width: 25%;
+			float: left;
 			font-size: 12px;
 			margin-left: 10px;
-			margin-bottom: 0;
+			margin-bottom: 5px;
 		};
 
-		input[type=submit]#delete {
+		input[type=submit].delete {
 			width: 25%;
+			float: left;
 			color: red;
 			float: center;
 			font-size: 12px;
