--- a/app/views/welcome/admin.html.erb
+++ b/app/views/welcome/admin.html.erb
@@ -1,6 +1,5 @@
 <body class="welcome">
 
-
 <% if (session[:is_admin] != 'true') %>
 	<div id="header">
 		<h2>Sorry, you do not have permission to access this page.</h2>
@@ -20,13 +19,13 @@
 
 			<% @categories.each do |category| %>
 				<form action="/categories/<%= category.id %>" method="post">
-					<input type="text" name="name" value="<%= category.name.upcase %>"/>
-					<input type="submit" value="Update"/>
+					<input type="text" name="name" value="<%= category.name %>"/>
+					<input type="submit" id="cat_<%= category.id %>" value="Update"/>
 					<input type="hidden" name="_method" value="patch"/>
 					<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
 				</form>
 				<form action="/categories/<%= category.id %>" method="post">
-					<input id="delete" type="submit" value="Delete"/>
+					<input class="delete" type="submit" value="Delete"/>
 					<input type="hidden" name="_method" value="delete"/>
 					<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
 				</form>
@@ -34,6 +33,7 @@
 
 		</div>
 		<div id="add-key-cat">
+			<h5>Add A New Category</h5>
 			<form action="/categories" method="post">
 				<input type="text" name="name" placeholder="Enter new category..."/>
 				<input type="submit" value="Create"/>
