working on admin center ajax calls

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -297,7 +297,7 @@
 			margin-bottom: 5px;
 		};
 
-		input[type=submit].delete {
+		input[type=submit].delete_cat {
 			width: 25%;
 			float: left;
 			color: red;
