--- a/app/views/welcome/admin.html.erb
+++ b/app/views/welcome/admin.html.erb
@@ -15,34 +15,34 @@
 	<div id="manage-cat-keys">
 		<h4>CATEGORIES</h4>
 
-		<div id="cat-key-list">
+		<script id="cat-template" type="mustache">
+			<div>
+				<form action="/categories/{{ id }}" method="post">
+					<input type="text" name="name" value="{{ name }}"/>
+					<input type="submit" class="update-cat" id="cat_{{ id }}" value="Update"/>
+					<input type="hidden" name="_method" value="patch"/>
+					<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
+				</form>
+				<form action="/categories/{{ id }}" method="post">
+					<input type="submit" class="delete-cat" id="cat_{{ id }}" value="Delete"/>
+					<input type="hidden" name="_method" value="delete"/>
+					<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
+				</form>
+			</div>
+		</script>
 
-			<script type="mustache" id="cat-template">
-				<div>
-					<form action="/categories/{{ id }}" method="post">
-						<input type="text" name="name" value="{{ name }}"/>
-						<input type="submit" class="update_cat" id="cat_{{ id }}" value="Update"/>
-						<input type="hidden" name="_method" value="patch"/>
-						<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
-					</form>
-					<form action="/categories/{{ id }}" method="post">
-						<input type="submit" class="delete_cat" id="cat_{{ id }}" value="Delete"/>
-						<input type="hidden" name="_method" value="delete"/>
-						<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
-					</form>
-				</div>
-			</script>
+		<div id="cat-list">
 
 			<% @categories.each do |category| %>
 				<div>
 					<form action="/categories/<%= category.id %>" method="post">
 						<input type="text" name="name" value="<%= category.name %>"/>
-						<input type="submit" class="update_cat" id="cat_<%= category.id %>" value="Update"/>
+						<input type="submit" class="update-cat" id="cat_<%= category.id %>" value="Update"/>
 						<input type="hidden" name="_method" value="patch"/>
 						<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
 					</form>
 					<form action="/categories/<%= category.id %>" method="post">
-						<input type="submit" class="delete_cat" id="cat_<%= category.id %>" value="Delete"/>
+						<input type="submit" class="delete-cat" id="cat_<%= category.id %>" value="Delete"/>
 						<input type="hidden" name="_method" value="delete"/>
 						<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
 					</form>
@@ -53,8 +53,8 @@
 		<div id="add-key-cat">
 			<h5>Add A New Category</h5>
 			<form action="/categories" method="post">
-				<input type="text" name="name" placeholder="Enter new category..."/>
-				<input type="submit" id="new_cat" value="Create"/>
+				<input type="text" id="cat-name" name="name" placeholder="Enter new category..."/>
+				<input type="submit" class="new-cat" value="Create"/>
 				<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
 			</form>
 		</div>
@@ -64,25 +64,49 @@
 	<div id="manage-cat-keys">
 		<h4>KEYWORDS</h4>
 
-
-		<div id="cat-key-list">
-
-			<% @keywords.each do |keyword| %>
-				<form action="/keywords/<%= keyword.id %>" method="post">
-					<input type="text" name="phrase" value="<%= keyword.phrase.upcase %>"/>
-					<input type="submit" value="Update"/>
-					<input type="hidden" name="_method" value="update"/>
+		<script id="key-template" type="mustache">
+			<div>
+				<form action="/keywords/{{ id }}" method="post">
+					<input type="text" name="phrase" value="{{ phrase }}"/>
+					<input type="submit" class="update-key" id="key_{{ id }}" value="Update"/>
+					<input type="hidden" name="_method" value="patch"/>
 					<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
 				</form>
-				<form action="/keywords/<%= keyword.id %>" method="post">
-					<input id="delete" type="submit" value="Delete"/>
+				<form action="/keywords/{{ id }}" method="post">
+					<input type="submit" class="delete-key" id="key_{{ id }}" value="Delete"/>
 					<input type="hidden" name="_method" value="delete"/>
 					<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
 				</form>
+			</div>
+		</script>
+
+		<div id="key-list">
+
+			<% @keywords.each do |keyword| %>
+				<div>
+					<form action="/keywords/<%= keyword.id %>" method="post">
+						<input type="text" name="phrase" value="<%= keyword.phrase %>"/>
+						<input type="submit" class="update-key" id="key_<%= keyword.id %>" value="Update"/>
+						<input type="hidden" name="_method" value="patch"/>
+						<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
+					</form>
+					<form action="/keywords/<%= keyword.id %>" method="post">
+						<input type="submit" class="delete-key" id="key_<%= keyword.id %>" value="Delete"/>
+						<input type="hidden" name="_method" value="delete"/>
+						<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
+					</form>
+				</div>
 			<% end %>
 
 		</div>
-
+		<div id="add-key-cat">
+			<h5>Add A New keyword</h5>
+			<form action="/keywords" method="post">
+				<input type="text" id="key-phrase" name="phrase" placeholder="Enter new keyword..."/>
+				<input type="submit" class="new-key" value="Create"/>
+				<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
+			</form>
+		</div>
 
 	</div>
 
