--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -87,10 +87,11 @@
 
 	#item-form {
 		width: 40%;
-		float: center;
+		height: 500px;
+		float: left;
 		margin-top: 20px;
-		margin-left: auto;
-		margin-right: auto;
+		margin-left: 100px;
+		margin-right: 0;
 		text-align: left;	
 		border: solid black 1px;
 		padding: 10px;
@@ -150,6 +151,24 @@
 		};	
 
 	};
+
+	#item-cats {
+		width: 20%;
+		height: 500px;
+		float: left;
+		margin-top: 20px;
+		margin-left: 20px;
+		border: solid black 1px;
+	}
+
+	#item-keys {
+		width: 20%;
+		height: 500px;
+		float: left;
+		margin-top: 20px;
+		margin-left: 20px;
+		border: solid black 1px;
+	}
 
 	#item-description {
 		width: 55%;
