--- a/app/views/welcome/admin.html.erb
+++ b/app/views/welcome/admin.html.erb
@@ -112,6 +112,15 @@
 
 	<div id="manage-items">
 		<h4>MANAGE ITEMS</h4>
+		<h5><a href="/items/new">ADD A NEW ITEM</a></h5>
+		<br>
+		<h4>FIND AN ITEM</h4>
+		<div id="find-item">
+			<label>Search by Code: 	<input type="text" name="code" value=""></label>
+
+
+		</div>
+		
 	</div>
 
 	<div id="google-analytics">
