--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -51,7 +51,7 @@
 			<div id="cat-list">
 
 				<% @categories.each do |category| %>
-					<input type="checkbox" name="category" value="<%= category.id %>"/> <%= category.name %><br>
+					<input type="checkbox" class="category" id="cat_<%= category.id %>"/> <%= category.name %><br>
 				<% end %>
 
 			 </div>
