--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,7 +1,7 @@
 @media (min-width: 770px) {
 
 	body.welcome {
-		background-image: url('http://www.marianiforos.com/homepic5.jpg');
+		background-image: url('http://www.neti-netisoccer.com/ebay/antiquela-1435251927-5711.jpg');
 		background-repeat: no-repeat;
 		background-size: 100%;
 		font-family: 'Cinzel', serif;
@@ -72,7 +72,7 @@
 		height: 440px;
 		float: left;
 		margin-top: 170px;
-		margin-left: 100px;
+		margin-left: 250px;
 		padding-bottom: 20px;
 		background-color: rgba(255,255,255,0.9);
 
@@ -109,7 +109,7 @@
 		height: 440px;
 		float: right;
 		margin-top: 170px;
-		margin-right: 100px;
+		margin-right: 250px;
 		background-color: rgba(255,255,255,0.9);
 		text-align: center;
 
@@ -150,7 +150,7 @@
 	#footer {
 		width: 100%;
 		height: 40px;
-		background-color: rgba(255,255,255,0.7);
+		background-color: rgba(255,255,255,0.9);
 		position: fixed;
 		bottom: 0;
 
