--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -1,3 +1,8 @@
+.carousel-inner .item img {
+	margin: 0 auto;
+};
+
+
 @media (min-width: 770px) {
 
 	body.image {
@@ -70,5 +75,6 @@
 		margin-right: 20px;
 
 	};
+
 
 };
