--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -11,20 +11,51 @@
 
 <h4><%= @item.code %></h4>
 
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
 
-<div id="item-thumbs-container">
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+  	<% @item.images.each_with_index do |image, i| %>
+	    <div class="item <% if (i==0) %> active <% end %>">
+	      <%= image_tag image.image.url if image.image_stored? %>
+	      <div class="carousel-caption">
+	        ...
+	      </div>
+	    </div>
+    <% end %>
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+
+
+
+<!-- <div id="item-thumbs-container">
 
 	<h4>IMAGES</h4>
 
 	<div id="item-thumbs">
 
-		<% @item.images.each do |image| %>
-			<%= image_tag image.image.thumb('500x400#').url if image.image_stored? %>
-		<% end %>
+	
 
 	</div>
 
-<div>
+<div> -->
 
 
 
